--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,8 @@
   position: fixed;
   top: 0px;
   width: 100%;
+  background-color: var(--dark-blue);
+  color: white;
 }
 .status-bar__column {
   width: 33%;
