--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,8 @@
 :root {
-  --yellow: #fae100;
+  --dark-blue: #016acc;
+  --bright-blue: #0084ff;
+  --receive-color: #4086f4;
+  --send-color: #00aec2;
   --horizontal-space: 25px;
   --main-border: 1px solid rgba(0, 0, 0, 0.2);
 }
