--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -3,12 +3,13 @@
   z-index: 99;
   height: 100vh;
   width: 100vw;
-  background-color: var(--yellow);
   display: flex;
   top: 0;
   justify-content: center;
   align-items: center;
   font-size: 32px;
+  background-color: var(--bright-blue);
+  color: white;
 }
 
 @media screen and (max-width: 645px) {
