--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,6 +4,8 @@
   align-items: center;
   padding: var(--horizontal-space);
   margin: 15px 0px;
+  background-color: var(--bright-blue);
+  color: white;
 }
 
 .screen-header__title {
@@ -25,4 +27,14 @@
 }
 .screen-header .fa-cog:hover {
   animation: rotateCog 1s linear infinite;
+}
+
+.screen-header__icons a {
+  position: relative;
+}
+
+.screen-header__alarm {
+  position: absolute;
+  right: 15px;
+  top: 36px;
 }
