--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -28,7 +28,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 .login-form__text:focus {
-  border-color: var(--yellow);
+  border-color: var(--bright-blue);
   transition: border-color 0.3s ease-in-out;
 }
 .login-form__text::placeholder {
@@ -36,7 +36,8 @@
 }
 
 .login-form__submit {
-  background-color: #2e363e;
+  background-color: var(--bright-blue);
+  color: white;
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
